# stabber

./: .gitignore  Makefile.am  README.md  configure-debug  configure.ac  runstabber.c  stabber-curl.sh  stabber.c  stabber.h  stabbertest.c
src/client/: stabber.c
src/server/: clients.c  clients.h  httpapi.c  httpapi.h  log.c  log.h  parser.c  parser.h  prime.c  prime.h  server.c  server.h  stanza.c  stanza.h  stanzas.c  stanzas.h  stream_parser.c  stream_parser.h  verify.c  verify.h  xmppclient.c  xmppclient.h
